--- a/iot-management-platform/requirements.txt
+++ b/iot-management-platform/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.7.2
 backports.zoneinfo==0.2.1
+channels==4.0.0
 Django==4.2.7
+django-cors-headers==4.3.1
 django-timescaledb==0.2.13
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.1
@@ -20,4 +22,3 @@ sqlparse==0.4.4
 tomli==2.0.1
 typing-extensions==4.8.0
 uritemplate==4.1.1
-django-cors-headers==4.3.1
